<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--<group android:checkableBehavior="single">-->
        <item
            android:id="@+id/navigation_item_login"
            android:icon="@null"
            android:title="@string/login" />
        <item
            android:id="@+id/navigation_item_wishlist"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/wishlist" />


        <item
            android:id="@+id/navigation_item_track"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/track" />
        <item
            android:id="@+id/navigation_item_invite"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/invite" />


        <item
            android:id="@+id/navigation_item_rate"
            android:icon="@mipmap/ic_launcher"
            tools:showAsAction="withText"
            android:title="@string/rate" />
        <item
            android:id="@+id/navigation_item_help"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/help" />
    <!--</group>-->

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/navigation_subheader_legal"
        android:title="@string/legal">
        <menu>
            <item
                android:id="@+id/navigation_sub_item_privacy"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/privacy"/>
            <item
                android:id="@+id/navigation_sub_item_returns"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/returns"/>
        </menu>
    </item>

</menu>
