<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hisham.design.AdilClientActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_number_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="number"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hint="@string/enter_first_number" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutOne"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <EditText
            android:id="@+id/et_number_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="number"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hint="@string/Enter_second_number" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_below="@+id/textInputLayoutTwo"
        android:text="Result="/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_sum"
        android:layout_below="@+id/tv_result"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
